--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitest/ui": "2.0.5",
     "chai": "4.3.6",
     "dotenv": "16.0.1",
+    "esbuild-sass-plugin": "3.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-import": "2.31.0",
